# EREON

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
dockerfiles/: Dockerfile.app
migrations/: env.py
migrations/versions/: 2025-07-05_init.py  2025-07-08_init.py  2025-07-09_init.py  2025-07-13_init.py  2025-07-31_add_payment.py  2025-08-04_change_payment_status.py  2025-08-13_add_referral_operation.py  2025-11-05_add_referral_source.py
scripts/: dataclass.py  get_test_token.py  jwt_utils.py  mock_notifications.py  utils.py
src/: main.py
src/api/: __init__.py  metrics.py
src/api/v1/: __init__.py
src/api/v1/auth/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
src/api/v1/base/: dependencies.py  schemas.py  service.py
src/api/v1/notification/: dependencies.py  router.py  schemas.py  service.py
src/api/v1/operation/: dependencies.py  router.py  schemas.py  service.py
src/api/v1/payment/: dependencies.py  exceptions.py  router.py  schemas.py  service.py
src/api/v1/rapira/: router.py
src/api/v1/referral/: dependencies.py  exceptions.py  levels.py  router.py  schemas.py  service.py
src/banking/: __init__.py  abstractions.py  dependencies.py  exceptions.py
src/core/: error_handler.py  logging_config.py
src/core/config/: __init__.py  constants.py
src/crypto_processing/: client.py  schemas.py
src/infra/postgres/: mixins.py  pg.py  uow.py
src/infra/redis/: dependencies.py  redis_api.py
src/processing/: network.py
src/scripts/: mock_operations.py
src/server/: server.py
(+48 files in other folders)
