[project]
name = "ereon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "black>=25.1.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.14",
    "greenlet>=3.2.3",
    "prometheus-client>=0.22.1",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pyopenssl>=25.1.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "telegram-webapp-auth>=3.0.6",
    "uvicorn>=0.35.0",
]
